overflow fixed

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   padding: 0;
 
   background: transparent;
-  overflow:hidden;
+
 }
 
 
